--- a/dl-with-pytorch/ch4_data_representation.ipynb
+++ b/dl-with-pytorch/ch4_data_representation.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "12d2d08a",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,7 @@
     "import imageio\n",
     "import torch\n",
     "import os\n",
+    "import string\n",
     "\n",
     "import csv\n",
     "import numpy as np"
@@ -667,8 +668,460 @@
    "source": [
     "n_matches = torch.sum(actual_indices & predicted_indices).item()\n",
     "n_predicted = torch.sum(predicted_indices).item(0)\n",
-    "n_actual = torch.sum(actual_indices).item()\n"
+    "n_actual = torch.sum(actual_indices).item()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d9f5edd",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "## Time series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "08e3ecb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 3.0000e+00, 1.3000e+01,\n",
+      "         1.6000e+01],\n",
+      "        [2.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 8.0000e+00, 3.2000e+01,\n",
+      "         4.0000e+01],\n",
+      "        [3.0000e+00, 1.0000e+00, 1.0000e+00,  ..., 5.0000e+00, 2.7000e+01,\n",
+      "         3.2000e+01],\n",
+      "        ...,\n",
+      "        [1.7377e+04, 3.1000e+01, 1.0000e+00,  ..., 7.0000e+00, 8.3000e+01,\n",
+      "         9.0000e+01],\n",
+      "        [1.7378e+04, 3.1000e+01, 1.0000e+00,  ..., 1.3000e+01, 4.8000e+01,\n",
+      "         6.1000e+01],\n",
+      "        [1.7379e+04, 3.1000e+01, 1.0000e+00,  ..., 1.2000e+01, 3.7000e+01,\n",
+      "         4.9000e+01]]) torch.Size([17520, 17])\n"
+     ]
+    }
+   ],
+   "source": [
+    "bikes_np = np.loadtxt(\"../data/dlwpt/ch4/bike-sharing-dataset/hour-fixed.csv\",\n",
+    "                      dtype=np.float32,\n",
+    "                      delimiter=\",\",\n",
+    "                      skiprows=1,\n",
+    "                      converters={1: lambda x: float(x[8:10])})\n",
+    "bikes = torch.from_numpy(bikes_np)\n",
+    "print(bikes, bikes.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cdf60fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([17520, 17]), (17, 1))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bikes.shape, bikes.stride()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d2a45ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([730, 24, 17]) (408, 17, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "daily_bikes = bikes.view(-1, 24, bikes.shape[1])\n",
+    "print(daily_bikes.shape, daily_bikes.stride())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "713e960e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([730, 17, 24]) (408, 1, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "daily_bikes = daily_bikes.transpose(1, 2)\n",
+    "print(daily_bikes.shape, daily_bikes.stride())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd523009",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 3, 3, 2, 2, 2, 2])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_day = bikes[:24].long()\n",
+    "weather_onehot = torch.zeros(first_day.shape[0], 4)\n",
+    "first_day[:, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d5c21180",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 0., 1., 0.],\n",
+       "        [0., 0., 1., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 1., 0., 0.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_onehot.scatter_(\n",
+    "    dim=1,\n",
+    "    index=first_day[:, 9].unsqueeze(1).long() - 1,\n",
+    "    value=1.0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dc5e3798",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.0000,  1.0000,  1.0000,  0.0000,  1.0000,  0.0000,  0.0000,  6.0000,\n",
+       "          0.0000,  1.0000,  0.2400,  0.2879,  0.8100,  0.0000,  3.0000, 13.0000,\n",
+       "         16.0000,  1.0000,  0.0000,  0.0000,  0.0000]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat((bikes[:24], weather_onehot), 1)[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4ba68637",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[1., 1., 1.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 1., 1., 1.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0.,  ..., 1., 1., 1.],\n",
+       "         [1., 1., 1.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       "\n",
+       "        [[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       "\n",
+       "        [[0., 0., 0.,  ..., 1., 1., 1.],\n",
+       "         [1., 1., 1.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.]],\n",
+       "\n",
+       "        [[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
+       "         [0., 0., 0.,  ..., 0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "daily_weather_onehot = torch.zeros(daily_bikes.shape[0], 4, daily_bikes.shape[2]) # we will cat along dim=1\n",
+    "daily_weather_onehot.scatter_(\n",
+    "    1,\n",
+    "    daily_bikes[:, 9, :].long().unsqueeze(1) - 1,\n",
+    "    1.0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c460acba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daily_bikes = torch.cat((daily_bikes, daily_weather_onehot), dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "58f0417a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([730, 21, 24])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(daily_bikes.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68fae861",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "## Representing text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "491f705d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../data/dlwpt/ch4/jane-austen/1342-0.txt\", encoding=\"utf8\") as f:\n",
+    "    text = f.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d6307632",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "“Impossible, Mr. Bennet, impossible, when I am not acquainted with him\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines = text.split(\"\\n\")\n",
+    "line = lines[200]\n",
+    "print(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "47db1b68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([70, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "letter_t = torch.zeros(len(line), 128)\n",
+    "print(letter_t.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "eb782514",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, letter in enumerate(line.lower().strip()):\n",
+    "    letter_index = ord(letter) if ord(letter) < 128 else 0\n",
+    "    letter_t[i][letter_index] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "610801b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "“Impossible, Mr. Bennet, impossible, when I am not acquainted with him ['impossible', 'mr', 'bennet', 'impossible', 'when', 'i', 'am', 'not', 'acquainted', 'with', 'him']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clean_words(input_str):\n",
+    "    punctuation = string.punctuation + \"“”\"\n",
+    "    word_list = input_str.lower().replace(\"\\n\", \" \").split()\n",
+    "    word_list = [word.strip(punctuation) for word in word_list]\n",
+    "    return word_list\n",
+    "\n",
+    "words_in_line = clean_words(line)\n",
+    "print(line, words_in_line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fd455597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7165 3326\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_list = sorted(set(clean_words(text)))\n",
+    "word2index_dict = {word: i for (i, word) in enumerate(word_list)}\n",
+    "\n",
+    "print(len(word2index_dict), word2index_dict[\"impossible\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "006dad17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0 3326 impossible\n",
+      " 1 4225 mr\n",
+      " 2  758 bennet\n",
+      " 3 3326 impossible\n",
+      " 4 6986 when\n",
+      " 5 3247 i\n",
+      " 6  364 am\n",
+      " 7 4353 not\n",
+      " 8  188 acquainted\n",
+      " 9 7054 with\n",
+      "10 3148 him\n",
+      "torch.Size([11, 7165])\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_t = torch.zeros(len(words_in_line), len(word2index_dict))\n",
+    "for i, word in enumerate(words_in_line):\n",
+    "    word_index = word2index_dict[word]\n",
+    "    word_t[i][word_index] = 1\n",
+    "    print('{:2} {:4} {}'.format(i, word_index, word))\n",
+    "    \n",
+    "print(word_t.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb3540d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
