--- a/dl-with-pytorch/ch5_mechanics_of_learning.ipynb
+++ b/dl-with-pytorch/ch5_mechanics_of_learning.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "id": "9049f210",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0b3d0355",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "e99ef892",
    "metadata": {},
    "outputs": [],
@@ -115,8 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7f3e5350",
+   "execution_count": 4,
+   "id": "39ac4a2c",
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "353f65d6",
+   "execution_count": 5,
+   "id": "094cf3cf",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0350a446",
+   "id": "6c8a7895",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -171,8 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "43ef5f6f",
+   "execution_count": 6,
+   "id": "e095ec5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d7fa6872",
+   "execution_count": 7,
+   "id": "47987644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d70e9694",
+   "execution_count": 8,
+   "id": "9531bbf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d7629307",
+   "execution_count": 9,
+   "id": "612dcb16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e9c9c3",
+   "id": "ff73710d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -249,8 +249,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "6aa525f7",
+   "execution_count": 10,
+   "id": "c4aebe88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "31df269d",
+   "execution_count": 11,
+   "id": "a4835527",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "tensor([nan, nan])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,8 +613,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "52c57288",
+   "execution_count": 12,
+   "id": "9c2f06b6",
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
        "tensor([ 0.2327, -0.0438])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4157c03d",
+   "id": "b6425f02",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -963,8 +963,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "144ced19",
+   "execution_count": 13,
+   "id": "a5d1578f",
    "metadata": {},
    "outputs": [
     {
@@ -2643,7 +2643,13 @@
       "Epoch 1670, Loss 3.019951820373535\n",
       "Epoch 1671, Loss 3.019639492034912\n",
       "Epoch 1672, Loss 3.0193254947662354\n",
-      "Epoch 1673, Loss 3.0190162658691406\n",
+      "Epoch 1673, Loss 3.0190162658691406\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 1674, Loss 3.0187063217163086\n",
       "Epoch 1675, Loss 3.018394708633423\n",
       "Epoch 1676, Loss 3.0180890560150146\n",
@@ -3200,7 +3206,13 @@
       "Epoch 2227, Loss 2.9415342807769775\n",
       "Epoch 2228, Loss 2.9414877891540527\n",
       "Epoch 2229, Loss 2.9414398670196533\n",
-      "Epoch 2230, Loss 2.941392660140991\n",
+      "Epoch 2230, Loss 2.941392660140991\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 2231, Loss 2.9413461685180664\n",
       "Epoch 2232, Loss 2.941298723220825\n",
       "Epoch 2233, Loss 2.9412527084350586\n",
@@ -3609,7 +3621,13 @@
       "Epoch 2636, Loss 2.9311013221740723\n",
       "Epoch 2637, Loss 2.9310896396636963\n",
       "Epoch 2638, Loss 2.9310789108276367\n",
-      "Epoch 2639, Loss 2.9310669898986816\n",
+      "Epoch 2639, Loss 2.9310669898986816\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 2640, Loss 2.93105411529541\n",
       "Epoch 2641, Loss 2.931044101715088\n",
       "Epoch 2642, Loss 2.9310340881347656\n",
@@ -3735,13 +3753,7 @@
       "Epoch 2762, Loss 2.9298958778381348\n",
       "Epoch 2763, Loss 2.9298911094665527\n",
       "Epoch 2764, Loss 2.9298818111419678\n",
-      "Epoch 2765, Loss 2.9298746585845947\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 2765, Loss 2.9298746585845947\n",
       "Epoch 2766, Loss 2.929868459701538\n",
       "Epoch 2767, Loss 2.9298593997955322\n",
       "Epoch 2768, Loss 2.929851770401001\n",
@@ -4131,7 +4143,13 @@
       "Epoch 3152, Loss 2.9282448291778564\n",
       "Epoch 3153, Loss 2.928241729736328\n",
       "Epoch 3154, Loss 2.928239345550537\n",
-      "Epoch 3155, Loss 2.928236484527588\n",
+      "Epoch 3155, Loss 2.928236484527588\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 3156, Loss 2.928236246109009\n",
       "Epoch 3157, Loss 2.9282326698303223\n",
       "Epoch 3158, Loss 2.9282312393188477\n",
@@ -5813,7 +5831,13 @@
       "Epoch 4834, Loss 2.9276487827301025\n",
       "Epoch 4835, Loss 2.9276480674743652\n",
       "Epoch 4836, Loss 2.9276468753814697\n",
-      "Epoch 4837, Loss 2.927647590637207\n",
+      "Epoch 4837, Loss 2.927647590637207\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch 4838, Loss 2.9276468753814697\n",
       "Epoch 4839, Loss 2.9276483058929443\n",
       "Epoch 4840, Loss 2.9276468753814697\n",
@@ -6001,7 +6025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dfe9a81",
+   "id": "aa7a10b1",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -6015,17 +6039,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "bdc17e3e",
+   "execution_count": 14,
+   "id": "cd688458",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fbfb3a98640>"
+       "<matplotlib.collections.PathCollection at 0x7fb832aba880>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6053,7 +6077,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d732d994",
+   "id": "f87e8c67",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -6067,8 +6091,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "775e160c",
+   "execution_count": 15,
+   "id": "b350e71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6082,8 +6106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "04e566dd",
+   "execution_count": 16,
+   "id": "8b44084e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6092,8 +6116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d29edd12",
+   "execution_count": 17,
+   "id": "e025aaf8",
    "metadata": {},
    "outputs": [
     {
@@ -6102,7 +6126,7 @@
        "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6113,10 +6137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "c5bc0264",
+   "execution_count": 18,
+   "id": "167d3f61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([4517.2969,   82.6000])\n"
+     ]
+    }
+   ],
    "source": [
     "loss = loss_fn(model(t_u, *params), t_c)\n",
     "loss.backward()\n",
@@ -6126,8 +6158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "02ccbb24",
+   "execution_count": 19,
+   "id": "9b88c87f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6137,8 +6169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "e16b620e",
+   "execution_count": 20,
+   "id": "213aa983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6162,8 +6194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "229e04f2",
+   "execution_count": 21,
+   "id": "b71588c4",
    "metadata": {},
    "outputs": [
     {
@@ -6188,7 +6220,7 @@
        "tensor([  5.3671, -17.3012], requires_grad=True)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6205,7 +6237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94539cd",
+   "id": "cb21498c",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -6219,8 +6251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "a24e2f1d",
+   "execution_count": 22,
+   "id": "f1427556",
    "metadata": {},
    "outputs": [
     {
@@ -6255,7 +6287,7 @@
        " 'swa_utils']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6266,7 +6298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57348fc",
+   "id": "f0a66144",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -6280,8 +6312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "04487380",
+   "execution_count": 23,
+   "id": "9c3b08b3",
    "metadata": {},
    "outputs": [
     {
@@ -6310,8 +6342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "49e66b67",
+   "execution_count": 24,
+   "id": "96ef61dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6334,8 +6366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "37f024cc",
+   "execution_count": 25,
+   "id": "7e3911dd",
    "metadata": {},
    "outputs": [
     {
@@ -6360,7 +6392,7 @@
        "tensor([  5.3671, -17.3012], requires_grad=True)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6381,7 +6413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c23e55a9",
+   "id": "39ac818b",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -6395,8 +6427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "f0b98885",
+   "execution_count": 26,
+   "id": "a37e9292",
    "metadata": {},
    "outputs": [
     {
@@ -6421,7 +6453,7 @@
        "tensor([  0.5368, -17.3048], requires_grad=True)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6442,7 +6474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02aed464",
+   "id": "eb80d0bc",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -6455,9 +6487,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "099ca6d2",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "### Splitting a dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "941851b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 9,  8,  0,  7,  5, 10,  2,  6,  1]) tensor([3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_samples = t_u.shape[0]\n",
+    "n_val = int(0.2 * n_samples)\n",
+    "\n",
+    "shuffled_indices = torch.randperm(n_samples)\n",
+    "\n",
+    "train_indices = shuffled_indices[:-n_val]\n",
+    "val_indices = shuffled_indices[-n_val:]\n",
+    "\n",
+    "print(train_indices, val_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0d946ea3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_t_u = t_u[train_indices]\n",
+    "train_t_c = t_c[train_indices]\n",
+    "\n",
+    "val_t_u = t_u[val_indices]\n",
+    "val_t_c = t_c[val_indices]\n",
+    "\n",
+    "train_t_un = 0.1 * train_t_u\n",
+    "val_t_un = 0.1 * val_t_u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c6b225c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add:\n",
+    "# 1. calculate validation loss at every epoch\n",
+    "\n",
+    "def training_loop(n_epochs,\n",
+    "                  optimizer,\n",
+    "                  params,\n",
+    "                  train_t_u,\n",
+    "                  val_t_u,\n",
+    "                  train_t_c,\n",
+    "                  val_t_c):\n",
+    "    for epoch in range(1, n_epochs + 1):\n",
+    "        train_t_p = model(train_t_u, *params)\n",
+    "        train_loss = loss_fn(train_t_p, train_t_c)\n",
+    "        \n",
+    "        with torch.no_grad(): # save computation by not building the backprop graph\n",
+    "            val_t_p = model(val_t_u, *params)\n",
+    "            val_loss = loss_fn(val_t_p, val_t_c)\n",
+    "            assert val_loss.requires_grad == False\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        train_loss.backward()\n",
+    "        # no val_loss.backward(); we don't want to train on the validation set\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        if epoch <= 3 or epoch % 500 == 0:\n",
+    "            print(f\"Epoch {epoch}, Training loss {train_loss.item():.4f},\"\n",
+    "                  f\" Validation loss {val_loss.item():.4f}\")\n",
+    "    \n",
+    "    return params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3cda7a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Training loss 51.4150, Validation loss 210.6365\n",
+      "Epoch 2, Training loss 30.8837, Validation loss 122.4504\n",
+      "Epoch 3, Training loss 26.0599, Validation loss 89.7899\n",
+      "Epoch 500, Training loss 7.6853, Validation loss 20.7935\n",
+      "Epoch 1000, Training loss 3.9516, Validation loss 8.9512\n",
+      "Epoch 1500, Training loss 3.1379, Validation loss 5.4303\n",
+      "Epoch 2000, Training loss 2.9606, Validation loss 4.2241\n",
+      "Epoch 2500, Training loss 2.9219, Validation loss 3.7563\n",
+      "Epoch 3000, Training loss 2.9135, Validation loss 3.5587\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  5.1676, -16.2686], requires_grad=True)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params = torch.tensor([1.0, 0.0], requires_grad=True)\n",
+    "learning_rate = 1e-2\n",
+    "optimizer = optim.SGD([params], lr=learning_rate)\n",
+    "\n",
+    "training_loop(\n",
+    "    n_epochs=3000,\n",
+    "    optimizer=optimizer,\n",
+    "    params=params,\n",
+    "    train_t_u=train_t_un, # use normalized values for SGD\n",
+    "    val_t_u=val_t_un,\n",
+    "    train_t_c=train_t_c,\n",
+    "    val_t_c=val_t_c\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e6325b3",
+   "id": "aeba9ef8",
    "metadata": {},
    "outputs": [],
    "source": []
