--- a/dl-with-pytorch/ch6_neural_networks.ipynb
+++ b/dl-with-pytorch/ch6_neural_networks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dbdd8357",
+   "id": "16b56ec7",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "278005fc",
+   "id": "974be201",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -30,20 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0a177ee8",
+   "execution_count": 17,
+   "id": "fd22cead",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from collections import OrderedDict"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "39559b2b",
+   "id": "fe8750dd",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -58,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "57b50cb7",
+   "id": "18a827ea",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "94c81c03",
+   "id": "497dd844",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3b00cbb4",
+   "id": "970edac2",
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3e495389",
+   "id": "9532343d",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44f4bab2",
+   "id": "05751ef2",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -175,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "753b974f",
+   "id": "edab001d",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3d108d9d",
+   "id": "187af69e",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0af2493c",
+   "id": "d69688c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "312130dd",
+   "id": "0db82501",
    "metadata": {},
    "outputs": [
     {
@@ -299,12 +303,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f839681",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "## Neural networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d73dea8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): Linear(in_features=1, out_features=13, bias=True)\n",
+      "  (1): Tanh()\n",
+      "  (2): Linear(in_features=13, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq_model = nn.Sequential(\n",
+    "                nn.Linear(1, 13),\n",
+    "                nn.Tanh(),\n",
+    "                nn.Linear(13, 1)\n",
+    "            )\n",
+    "print(seq_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "76e12b0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.weight torch.Size([13, 1])\n",
+      "0.bias torch.Size([13])\n",
+      "2.weight torch.Size([1, 13])\n",
+      "2.bias torch.Size([1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, param in seq_model.named_parameters():\n",
+    "    print(name, param.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bdb9e283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (hidden_linear): Linear(in_features=1, out_features=8, bias=True)\n",
+      "  (hidden_activation): Tanh()\n",
+      "  (output_linear): Linear(in_features=8, out_features=1, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq_model = nn.Sequential(OrderedDict([\n",
+    "    (\"hidden_linear\", nn.Linear(1, 8)),\n",
+    "    (\"hidden_activation\", nn.Tanh()),\n",
+    "    (\"output_linear\", nn.Linear(8, 1))\n",
+    "]))\n",
+    "\n",
+    "print(seq_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "55a89f41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hidden_linear.weight torch.Size([8, 1])\n",
+      "hidden_linear.bias torch.Size([8])\n",
+      "output_linear.weight torch.Size([1, 8])\n",
+      "output_linear.bias torch.Size([1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, param in seq_model.named_parameters():\n",
+    "    print(name, param.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1598645c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Training loss 164.0676, Validation loss 222.0617\n",
+      "Epoch 1000, Training loss 5.6413, Validation loss 5.8622\n",
+      "Epoch 2000, Training loss 3.7771, Validation loss 3.6988\n",
+      "Epoch 3000, Training loss 2.1127, Validation loss 1.8008\n",
+      "Epoch 4000, Training loss 1.9443, Validation loss 1.9044\n",
+      "Epoch 5000, Training loss 1.8977, Validation loss 1.9743\n",
+      "output tensor([[ 7.8941],\n",
+      "        [20.3991]], grad_fn=<AddmmBackward0>)\n",
+      "answer tensor([[ 6.],\n",
+      "        [21.]])\n",
+      "hidden tensor([[ 0.0019],\n",
+      "        [-0.0049],\n",
+      "        [ 0.0005],\n",
+      "        [ 0.0007],\n",
+      "        [-0.0019],\n",
+      "        [ 0.0011],\n",
+      "        [ 0.0064],\n",
+      "        [-0.0010]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimizer = optim.SGD(seq_model.parameters(), lr=1e-3)\n",
+    "\n",
+    "training_loop(\n",
+    "    n_epochs=5000,\n",
+    "    optimizer=optimizer,\n",
+    "    model=seq_model,\n",
+    "    loss_fn=nn.MSELoss(),\n",
+    "    t_u_train=t_un_train,\n",
+    "    t_u_val=t_un_val,\n",
+    "    t_c_train=t_c_train,\n",
+    "    t_c_val=t_c_val\n",
+    ")\n",
+    "\n",
+    "print(\"output\", seq_model(t_un_val))\n",
+    "print(\"answer\", t_c_val)\n",
+    "print(\"hidden\", seq_model.hidden_linear.weight.grad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a148743",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "### Comparing to linear model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1891cff",
+   "id": "4a1a3a3a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t_range = torch.arange(20., 90.).unsqueeze(1) # batch\n",
+    "\n",
+    "fig = plt.figure(dpi=600)\n",
+    "plt.xlabel(\"Fahrenheit\")\n",
+    "plt.ylabel(\"Celsius\")\n",
+    "plt.plot(t_u.numpy(), t_c.numpy(), 'o')\n",
+    "plt.plot(t_range.numpy(), seq_model(0.1 * t_range).detach().numpy(), 'e-')"
+   ]
   }
  ],
  "metadata": {
