--- a/dl-with-pytorch/ch8_convolutions.ipynb
+++ b/dl-with-pytorch/ch8_convolutions.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "id": "3b2993d8",
    "metadata": {},
    "outputs": [],
@@ -43,6 +43,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import time\n",
     "import datetime\n",
     "\n",
     "from torchvision import datasets\n",
@@ -561,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d7de3fae",
+   "id": "33b2c401",
    "metadata": {},
    "outputs": [
     {
@@ -584,15 +585,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "2adb9b88",
+   "execution_count": 52,
+   "id": "000a375d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def training_loop(n_epochs, optimizer, model, loss_fn, train_loader):\n",
+    "def training_loop(n_epochs, optimizer, model, loss_fn, train_loader, device=\"cpu\"):\n",
+    "    prev_devices = [d.device for d in model.parameters()]\n",
+    "    \n",
+    "    model.to(device=device)\n",
+    "    \n",
     "    for epoch in range(1, n_epochs + 1):\n",
     "        loss_train = 0.0\n",
     "        for imgs, labels in train_loader:\n",
+    "            imgs = imgs.to(device=device)\n",
+    "            labels = labels.to(device=device)\n",
+    "            \n",
     "            outputs = model(imgs)\n",
     "            \n",
     "            loss = loss_fn(outputs, labels)\n",
@@ -607,13 +615,16 @@
     "            print(\"{} Epoch {}, Training loss {}\".format(\n",
     "                datetime.datetime.now(), epoch,\n",
     "                loss_train / len(train_loader) # average loss per batch\n",
-    "                ))"
+    "                ))\n",
+    "        \n",
+    "    for param, dev in zip(model.parameters(), prev_devices):\n",
+    "        param.to(device=dev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "0dd573e6",
+   "execution_count": 53,
+   "id": "55cd4b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,25 +633,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "5a6351c5",
+   "execution_count": 54,
+   "id": "9690683c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-01-11 21:39:02.464929 Epoch 1, Training loss 0.5680743810857177\n",
-      "2023-01-11 21:39:23.360175 Epoch 10, Training loss 0.34150097362554754\n",
-      "2023-01-11 21:39:46.559400 Epoch 20, Training loss 0.2999537779836898\n",
-      "2023-01-11 21:40:09.661355 Epoch 30, Training loss 0.2746243792449593\n",
-      "2023-01-11 21:40:32.877342 Epoch 40, Training loss 0.2530979527409669\n",
-      "2023-01-11 21:40:56.190216 Epoch 50, Training loss 0.23633696798496184\n",
-      "2023-01-11 21:41:19.236614 Epoch 60, Training loss 0.22289931275852168\n",
-      "2023-01-11 21:41:42.429869 Epoch 70, Training loss 0.2079803646559928\n",
-      "2023-01-11 21:42:06.571989 Epoch 80, Training loss 0.19585816277440188\n",
-      "2023-01-11 21:42:31.083816 Epoch 90, Training loss 0.18386738614481726\n",
-      "2023-01-11 21:42:55.853262 Epoch 100, Training loss 0.16957332329100863\n"
+      "2023-01-11 22:22:39.406881 Epoch 1, Training loss 0.5950819570927104\n",
+      "2023-01-11 22:22:49.573453 Epoch 10, Training loss 0.3305924862243567\n",
+      "2023-01-11 22:23:01.198573 Epoch 20, Training loss 0.2915945346378217\n",
+      "2023-01-11 22:23:12.718849 Epoch 30, Training loss 0.26535357321333736\n",
+      "2023-01-11 22:23:24.265052 Epoch 40, Training loss 0.2487878377080723\n",
+      "2023-01-11 22:23:35.804193 Epoch 50, Training loss 0.23031770366771964\n",
+      "2023-01-11 22:23:47.830888 Epoch 60, Training loss 0.21427689924551424\n",
+      "2023-01-11 22:23:59.347055 Epoch 70, Training loss 0.20239451299807068\n",
+      "2023-01-11 22:24:11.552402 Epoch 80, Training loss 0.18723479992929537\n",
+      "2023-01-11 22:24:23.173364 Epoch 90, Training loss 0.1748520847243868\n",
+      "2023-01-11 22:24:35.028932 Epoch 100, Training loss 0.16120539975773757\n"
      ]
     }
    ],
@@ -649,18 +660,23 @@
     "optimizer = optim.SGD(model.parameters(), lr=1e-2)\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "\n",
+    "start = time.time()\n",
     "training_loop(\n",
     "    n_epochs=100,\n",
     "    optimizer=optimizer,\n",
     "    model=model,\n",
     "    loss_fn=loss_fn,\n",
-    "    train_loader=train_loader\n",
-    ")"
+    "    train_loader=train_loader,\n",
+    "    device=\"mps\"\n",
+    ")\n",
+    "end = time.time()\n",
+    "\n",
+    "print(\"training took {:.4f} seconds\".format(end - start))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6085b4d9",
+   "id": "06bc56e4",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -674,16 +690,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "94925acb",
+   "execution_count": 51,
+   "id": "962a3876",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy train: 0.92\n",
-      "Accuracy val: 0.88\n"
+      "Accuracy train: 0.94\n",
+      "Accuracy val: 0.89\n"
      ]
     }
    ],
@@ -691,26 +707,36 @@
     "train_loader = torch.utils.data.DataLoader(cifar2, batch_size=64, shuffle=False)\n",
     "val_loader = torch.utils.data.DataLoader(cifar2_val, batch_size=64, shuffle=False)\n",
     "\n",
-    "def validate(model, train_loader, val_loader):\n",
+    "def validate(model, train_loader, val_loader, device=\"cpu\"):\n",
+    "    prev_devices = [d.device for d in model.parameters()]\n",
+    "    \n",
+    "    model.to(device=device)\n",
+    "    \n",
     "    for name, loader in [(\"train\", train_loader), (\"val\", val_loader)]:\n",
     "        correct = 0\n",
     "        total = 0\n",
     "        \n",
     "        with torch.no_grad():\n",
     "            for imgs, labels in loader:\n",
+    "                imgs = imgs.to(device=device)\n",
+    "                labels = labels.to(device=device)\n",
+    "                \n",
     "                outputs = model(imgs)\n",
     "                _, predicted = torch.max(outputs, dim=1) # get index of highest prediction\n",
     "                total += labels.shape[0] # batch is zeroth dimension\n",
     "                correct += int((predicted == labels).sum())\n",
     "                \n",
     "        print(\"Accuracy {}: {:.2f}\".format(name, correct / total))\n",
+    "    \n",
+    "    for param, dev in zip(model.parameters(), prev_devices):\n",
+    "        param.to(device=dev)\n",
     "\n",
-    "validate(model, train_loader, val_loader)"
+    "validate(model, train_loader, val_loader, \"mps\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8ca3b899",
+   "id": "cfb4291d",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -725,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d0410abc",
+   "id": "36fd1fcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "06049ff2",
+   "id": "c6324bea",
    "metadata": {},
    "outputs": [
     {
@@ -750,14 +776,15 @@
     }
    ],
    "source": [
-    "loaded_model = Net()\n",
-    "loaded_model.load_state_dict(torch.load(f\"{model_path}/birds_vs_airplanes.pt\"))"
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "loaded_model = Net().to(device=device)\n",
+    "loaded_model.load_state_dict(torch.load(f\"{model_path}/birds_vs_airplanes.pt\", map_location=device))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ef6148d2",
+   "id": "b6131939",
    "metadata": {},
    "outputs": [
     {
@@ -777,8 +804,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "30c80d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.backends.mps.is_available()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "012cc5f6",
+   "metadata": {},
+   "source": [
+    "### Training on other backends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3c6315cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-11 22:29:26.652315 Epoch 1, Training loss 0.6025212249558443\n",
+      "2023-01-11 22:29:48.015831 Epoch 10, Training loss 0.3383235363823593\n",
+      "2023-01-11 22:30:15.908170 Epoch 20, Training loss 0.30560896332096904\n",
+      "2023-01-11 22:30:41.881763 Epoch 30, Training loss 0.2813950756173225\n",
+      "2023-01-11 22:31:05.562710 Epoch 40, Training loss 0.26414813727709896\n",
+      "2023-01-11 22:31:28.382132 Epoch 50, Training loss 0.24701983742653186\n",
+      "2023-01-11 22:31:51.197310 Epoch 60, Training loss 0.23012285646359631\n",
+      "2023-01-11 22:32:14.023121 Epoch 70, Training loss 0.21722534132801044\n",
+      "2023-01-11 22:32:37.853313 Epoch 80, Training loss 0.2038199831346038\n",
+      "2023-01-11 22:33:02.636112 Epoch 90, Training loss 0.18930920379556668\n",
+      "2023-01-11 22:33:27.549949 Epoch 100, Training loss 0.17269327837950105\n",
+      "training on cpu took 243.4521 seconds\n",
+      "2023-01-11 22:33:28.762699 Epoch 1, Training loss 0.5672567760109142\n",
+      "2023-01-11 22:33:39.277674 Epoch 10, Training loss 0.3341990658052408\n",
+      "2023-01-11 22:33:50.842534 Epoch 20, Training loss 0.29329404073536014\n",
+      "2023-01-11 22:34:02.424411 Epoch 30, Training loss 0.2679851743256211\n",
+      "2023-01-11 22:34:14.107833 Epoch 40, Training loss 0.24808184935408792\n",
+      "2023-01-11 22:34:25.590459 Epoch 50, Training loss 0.2303994127614483\n",
+      "2023-01-11 22:34:36.786972 Epoch 60, Training loss 0.216148261313036\n",
+      "2023-01-11 22:34:47.927791 Epoch 70, Training loss 0.20149011468621575\n",
+      "2023-01-11 22:34:59.329488 Epoch 80, Training loss 0.187581861095064\n",
+      "2023-01-11 22:35:10.657261 Epoch 90, Training loss 0.17108086363714972\n",
+      "2023-01-11 22:35:21.830691 Epoch 100, Training loss 0.15672248236502812\n",
+      "training on mps took 114.2804 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "for device in [\"cpu\", \"mps\"]:\n",
+    "    model = Net()\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=1e-2)\n",
+    "    loss_fn = nn.CrossEntropyLoss()\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    training_loop(\n",
+    "        n_epochs=100,\n",
+    "        optimizer=optimizer,\n",
+    "        model=model,\n",
+    "        loss_fn=loss_fn,\n",
+    "        train_loader=train_loader,\n",
+    "        device=device\n",
+    "    )\n",
+    "    end = time.time()\n",
+    "    print(\"training on {} took {:.4f} seconds\".format(device, end - start))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5faf24a0",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "## Model design"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e0e1a65",
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "source": [
+    "### Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "15fe2a01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NetDropout(nn.Module):\n",
+    "    def __init__(self, n_chans1=32):\n",
+    "        super().__init__()\n",
+    "        self.n_chans1 = n_chans1\n",
+    "        \n",
+    "        self.conv1 = nn.Conv2d(3, n_chans1, kernel_size=3, padding=1)\n",
+    "        self.conv1_dropout = nn.Dropout2d(p=0.4)\n",
+    "        self.conv2 = nn.Conv2d(n_chans1, n_chans1 // 2, kernel_size=3, padding=1)\n",
+    "        self.conv2_dropout = nn.Dropout2d(p=0.4)\n",
+    "        \n",
+    "        self.fc1 = nn.Linear(8 * 8 * n_chans1 // 2, 32)\n",
+    "        self.fc2 = nn.Linear(32, 2)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        out = F.max_pool2d(torch.tanh(self.conv1(x)), 2)\n",
+    "        out = self.conv1_dropout(out)\n",
+    "        out = F.max_pool2d(torch.tanh(self.conv2(out)), 2)\n",
+    "        out = self.conv2_dropout(out)\n",
+    "        out = out.view(-1, 8 * 8 * self.nchans1 // 2)\n",
+    "        out = torch.tanh(self.fc1(out))\n",
+    "        out = self.fc2(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4785f92f",
+   "id": "9f098002",
    "metadata": {},
    "outputs": [],
    "source": []
